# graphite

./: .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  tsconfig.node.json  tsconfig.worker.json  vite.config.ts  vitest.config.ts
benchmarks/: ceilings.json
docs/: BLUEPRINT.md  README.md
docs/adr/: ADR-001-monorepo-structure.md  ADR-002-webgpu-rendering-api.md  ADR-003-offscreencanvas-worker.md  ADR-004-rust-wasm-engine.md  ADR-005-wasm-bindgen.md  ADR-006-sdf-shape-rendering.md  ADR-007-color-representation.md  ADR-008-slot-map-scene-storage.md  ADR-009-protocol-first-ipc.md  ADR-010-document-crate-status.md  ADR-011-typescript-document-model.md  ADR-012-no-meta-framework.md  ADR-013-m2-ui-data-flow.md  ADR-014-m3-tools-and-floating-layer.md  ADR-015-command-and-shortcut-architecture.md  ADR-016-form-stack-deferral.md  ADR-017-routing.md  ADR-018-theming.md  ADR-019-panel-registry.md  ADR-020-document-operations-and-history.md  ADR-021-graphite-file-format-and-file-layer.md  ADR-023-spatial-index-deferral.md  (+6 more)
scripts/: check-bench-ceilings.mjs  check-bundle-size.mjs
(+165 files in other folders)
